Simplify overlapping tests and align range validation with new contract
* Delete RawForwardIndexInvertedIndexTest (196 lines) — fully subsumed
  by RawForwardIndexWithDictionaryTest's RAW_DICT_INV_DIMENSION column,
  which covers metadata + EQ/IN/REGEXP_LIKE/inequality across both
  query engines plus several skip-index paths.
* Trim InvertedIndexHandlerTest down to just the format-detector unit
  tests (130 lines removed). The deleted E2E preprocessor-rebuild test
  is fully covered by LegacyRawValueInvertedIndexMigrationIntegration
  Test, which exercises the same flow against real v1 AND v3 fixtures
  with both black-box query checks and white-box on-disk assertions.
* RangeIndexType.validate now requires a dictionary unconditionally.
  Drop the old "numeric columns can have raw range without dict"
  exception so the validation matches the new RangeIndexType
  .requiresDictionary == true contract end-to-end (config-time
  validation, segment-build-time dictionary preservation, and
  reload-time fail-fast all agree).
* Update the now-stale numeric-range tests in
  IndexCombinationValidationTest: rename Passes → Fails for
  testRawWithRangeIndex{Numeric,Float}ColumnNoDict, and add a positive
  testRawWithRangeIndexNumericColumnWithExplicitDictPasses showing the
  shared-dict opt-in path. Update testMixedColumnsAllValidPasses to
  drop the floatCol raw+range case which is no longer valid.
* Update TableConfigUtilsTest.testValidateFieldConfig: the existing
  "RAW intCol + range with FORWARD_INDEX_DISABLED" case now expects a
  dictionary-related rejection instead of being permitted.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>